--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "lodash": "^4.17.10",
     "vue": "^2.5.17",
+    "vue-flatpickr-component": "^7.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
