--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@vue/eslint-config-prettier": "^3.0.1",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "webpack-deep-scope-plugin": "^1.6.0"
   },
   "browserslist": [
     "> 1%",
