--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.10",
     "vue": "^2.5.17",
     "vue-flatpickr-component": "^7.0.6",
+    "vue-i18n": "^8.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
