--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue-flatpickr-component": "^7.0.6",
     "vue-i18n": "^8.1.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
