--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-flatpickr-component": "^7.0.6",
     "vue-i18n": "^8.1.0",
     "vue-router": "^3.0.1",
+    "vue-simplemde": "^0.4.8",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4"
   },
