--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bootstrap-vue": "^2.0.0-rc.24",
     "core-js": "^2.6.5",
     "lodash": "^4.17.13",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.26",
     "vue": "^2.6.10",
     "vue-flatpickr-component": "^8.1.2",
     "vue-i18n": "^8.11.2",
