:bug: Add pagination.

--- a/docker_config/httpd.conf
+++ b/docker_config/httpd.conf
@@ -195,15 +195,6 @@ LoadModule dir_module modules/mod_dir.so
 LoadModule alias_module modules/mod_alias.so
 LoadModule rewrite_module modules/mod_rewrite.so
 
-<IfModule mod_rewrite.c>
-  RewriteEngine On
-  RewriteBase /
-  RewriteRule ^index\.html$ - [L]
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule . /index.html [L]
-</IfModule>
-
 <IfModule unixd_module>
 #
 # If you wish httpd to run as a different user or group, you must run
@@ -295,6 +286,15 @@ DocumentRoot "/usr/local/apache2/htdocs"
     # Controls who can get stuff from this server.
     #
     Require all granted
+
+    <IfModule mod_rewrite.c>
+        RewriteEngine On
+        RewriteBase /editor
+        RewriteRule ^index\.html$ - [L]
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteRule . /index.html [L]
+    </IfModule>
 </Directory>
 
 #
