--- a/package.json
+++ b/package.json
@@ -8,20 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.22",
-    "@fortawesome/free-regular-svg-icons": "^5.10.2",
-    "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
     "@johmun/vue-tags-input": "^2.1.0",
     "axios": "^0.19.0",
-    "bootstrap-vue": "^2.0.0-rc.24",
+    "bootstrap-vue": "^2.0.2",
     "core-js": "^3.2.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
     "vue": "^2.6.10",
     "vue-flatpickr-component": "^8.1.3",
-    "vue-i18n": "^8.14.0",
+    "vue-i18n": "^8.14.1",
     "vue-router": "^3.1.3",
     "vue-simplemde": "^1.0.0",
     "vuex": "^3.1.1",
@@ -33,7 +33,7 @@
     "@vue/cli-service": "^3.11.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.3.0",
+    "eslint": "^6.5.1",
     "eslint-plugin-vue": "^5.2.3",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
