:rocket: Rejiggle urls.

--- a/docker_config/httpd.conf
+++ b/docker_config/httpd.conf
@@ -289,7 +289,7 @@ DocumentRoot "/usr/local/apache2/htdocs"
 
     <IfModule mod_rewrite.c>
         RewriteEngine On
-        RewriteBase /editor
+        # RewriteBase /editor
         RewriteRule ^index\.html$ - [L]
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteCond %{REQUEST_FILENAME} !-d
