--- a/package.json
+++ b/package.json
@@ -11,32 +11,33 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-regular-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/vue-fontawesome": "^0.1.7",
+    "@fortawesome/vue-fontawesome": "^0.1.8",
     "@johmun/vue-tags-input": "^2.1.0",
     "axios": "^0.19.0",
-    "bootstrap-vue": "^2.0.2",
-    "core-js": "^3.2.1",
+    "bootstrap-vue": "^2.1.0",
+    "core-js": "^3.4.1",
+    "easymde": "^2.8.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
-    "moment-timezone": "^0.5.26",
+    "moment-timezone": "^0.5.27",
     "vue": "^2.6.10",
-    "vue-flatpickr-component": "^8.1.3",
-    "vue-i18n": "^8.14.1",
+    "vue-flatpickr-component": "^8.1.5",
+    "vue-i18n": "^8.15.0",
     "vue-router": "^3.1.3",
     "vue-simplemde": "^1.0.0",
-    "vuex": "^3.1.1",
-    "vuex-persistedstate": "^2.5.4"
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "^7.6.0",
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-eslint": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
+    "@vue/cli-plugin-babel": "^4.0.5",
+    "@vue/cli-plugin-eslint": "^4.0.5",
+    "@vue/cli-service": "^4.0.5",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^6.5.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "node-sass": "^4.12.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-vue": "^6.0.1",
+    "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
   }
